<resources>
    <string name="app_name">Fit Sport</string>
    <string name="text_name_results">Главная</string>
    <string name="text_name_nutrition">Питание</string>
    <string name="text_name_library">Рецепты</string>
    <string name="text_name_pedometer">Шагомер</string>
    <string name="text_name_settings">Настройки</string>
    <string name="active_users_today">Активных пользователей сегодня</string>
    <string name="name_user">Имя пользователя</string>
    <string name="beginning_set">2000 кал</string>
    <string name="average_set">1500 кал</string>
    <string name="confident_set">800 кал</string>
    <string name="main">Главная</string>
    <string name="name_dieе">Название диеты</string>
    <string name="morning">Утро</string>
    <string name="dinner">Обед</string>
    <string name="supper">Ужин</string>
    <string name="add">Добавить</string>
    <string name="main_text_library">Выберите фильтр для поиска:</string>
    <string name="weight_text">Для набора массы</string>
    <string name="loss_text">Для похудения</string>
    <string name="street_food">Стритфуд</string>
    <string name="all">Все</string>
    <string name="number_of_users">52987</string>
    <string name="click">Нажми</string>
    <string name="plus">+</string>
    <string name="main_text_pedometer">Введите цель шагов на сегодня</string>
    <string name="number_of_steps">Шагов: 0</string>
    <string name="main_text_results">Пройдите опрос для подбора рациона</string>
    <string name="question_1">Сколько раз в день вы обычно едите?</string>
    <string name="question_2">Какую цель вы преследуете с помощью питания?</string>
    <string name="question_3">Какое питание вы предпочитаете?</string>
    <string name="question_4">Сколько воды вы пьете ежедневно?</string>
    <string name="question_5">Как часто вы употребляете фаст-фуд и полуфабрикаты?</string>
    <string name="question_6">Как вы относитесь к потреблению сладкого и десертов?</string>
    <string name="question_7">Как часто вы употребляете мясные продукты?</string>
    <string name="question_8">Как часто вы употребляете рыбу и морепродукты?</string>
    <string name="survey_completed">Опрос пройден</string>
    <string name="main_text_settings">Введите ваше имя</string>
    <string name="text_settings">Ваш цель калорий</string>
    <string name="save">Сохранить</string>
    <string name="text_survey_again">Пройти опрос еще раз</string>
    <string name="clear_results">Очистить результаты</string>
    <string name="meal_plan">План питания на день:</string>
    <string name="text_morning">Утро:</string>
    <string name="text_dinner">Обед:</string>
    <string name="text_supper">Ужин:</string>
    <string name="text_likes">10 отметок нравится</string>
    <string name="nutrition">Питание</string>
    <string name="recipes">Рецепты</string>
    <string name="pedometer">Шагомер</string>
    <string name="settings">Настройки</string>
</resources>