<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/results"
        android:checked="true"
        android:icon="@drawable/ic_results"
        android:title="@string/main"/>

    <item
        android:id="@+id/nutrition"
        android:icon="@drawable/ic_nutrition"
        android:title="@string/nutrition"/>
    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_recipes"
        android:title="@string/recipes"/>
    <item
        android:id="@+id/pedometer"
        android:icon="@drawable/ic_steps"
        android:title="@string/pedometer"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>