<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:text="Введите имя пользователя" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/meal_plan"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/hotpot"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    tools:text="Название диеты" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/text_morning" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/morningNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    tools:text="Омлет с беконом и сыром, свежий апельсиновый сок, кофе или чай." />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/text_dinner" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dinnerNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    tools:text="Салат из свежих овощей с оливковым маслом, куриная грудка гриль, картофельное пюре, компот из сухофруктов." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/text_supper" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/supperNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    tools:text="Лосось на пару с лимонным соусом, квиноа с грибами, бокал белого вина, фруктовый салат для десерта." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:background="@drawable/background_card"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/heartButton"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/grey2"
                    app:icon="@drawable/heart"
                    android:layout_marginEnd="2dp"
                    app:iconSize="22dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/text_likes"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
