<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="6dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/grey"
                    android:hint="Введите ваше имя "
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_settings"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="Ваш цель калорий"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioSet"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="16dp">

                        <RadioButton
                            android:id="@+id/level1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/beginning_set"
                            android:checked="true"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/level2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average_set"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:id="@+id/level3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confident_set"
                            android:textColor="@color/black" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginVertical="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/calories"/>

                </LinearLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/grey"
                android:textColor="@color/main_green"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="Сохранить"
                android:layout_marginBottom="20dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="Пройти опрос еще раз "/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/herb"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="Очистить результаты"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>